--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -241,3 +241,36 @@ body{
         transform: translateY(-20px);
     }
 }
+
+/* RESPONSIVIDADE */
+
+@media(max-width: 550px){
+    .cabecalho{
+        min-height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-top: 30px;
+        & .foto-perfil{
+            width: 350px;
+            height: 450px;
+            box-shadow: 0 0 20px rgba(79, 70, 229, 0.3);
+            border-radius: 50%;
+            border: 4px solid var(--vidro);
+            animation: flutuar 5s ease infinite; /* ANIMACAO */
+        }
+    
+        & h1{
+            font-size: 3.5rem;
+            color: var(--primaria);
+            font-weight: bold;
+            margin: 20px;
+        }
+    
+        & .cabecalho-subtitulo{
+            font-size: 1.5rem;
+            color: var(--claro);
+        }
+    }
+}
